--- a/1장 타입스크립트 알아보기/아이템1. 타입스크립트와 자바스크립트의 관계 이해하기.md
+++ b/1장 타입스크립트 알아보기/아이템1. 타입스크립트와 자바스크립트의 관계 이해하기.md
@@ -1,1 +1,3 @@
-
+- 타입스크립트는 변수가 문자열이라는 것을 알려주지 않아도 초깃값으로부터 타입을 추론한다.  
+- 타입 추론은 타입스크립트에서 중요한 부분이다.
+  - 타입 시스템의 목표 중 하나는 런타임에 오류를 발생시킬 코드를 미리 찾아내는 것이다.
